page used to test sections

--- a/test.html
+++ b/test.html
@@ -120,7 +120,6 @@
 </nav>
 
 <!-- Breadcrumbs -->
-
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -317,8 +316,8 @@
           <div class="card-header" id="headingOne">
             <h3 class="mb-0 mt-0" id="filter-titles">
               <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Type of products
-              </button>
+                <h4>Type of products</h4>
+               </button>
             </h3>
           </div>
 
@@ -354,7 +353,7 @@
           <div class="card-header" id="headingTwo">
             <h3 class="mb-0 mt-0" id="filter-title">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                Feedstock
+                <h4>Feedstock</h4>
               </button>
             </h3>
           </div>
@@ -381,7 +380,7 @@
           <div class="card-header" id="headingThree">
             <h3 class="mb-0 mt-0" id="filter-title">
               <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Colors
+                <h4>Colors</h4>
               </button>
             </h3>
           </div>
@@ -408,8 +407,8 @@
         <div class="filter">
           <div class="card-header" id="headingOne">
             <h3 class="mb-0 mt-0" id="filter-titles">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                Price
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseFour">
+                <h4>Price</h4>
               </button>
             </h3>
           </div>
@@ -442,85 +441,239 @@
 
       </div>
     </div>
+          <!-- main procts -->
+     <div class="col-md-9">
 
+         <div class="row">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+              <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+
+
+         <div class="row mt-5">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+
+         <div class="row mt-5">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+
+         <div class="row mt-5">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+
+         <div class="row mt-5">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+
+         <div class="row mt-5">
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-7.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-8.png" class="img-responsive img-principal"  alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-9.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+           <div class="products-container col-md-3">
+             <a href="#">
+             <img src="img/living-room-created-by-me/html/lv-10.png" class="img-responsive" alt="Sofas section"/>
+             <div class="text-left">Lorem Ipsum</a></div>
+             <h6 class="text-left">$ 290,00</h6>
+           </div>
+
+         </div>
+         <!-- Pagination-->
+
+         </br>
+         </br>
+          <div class="row justify-content-center mt-5">
+
+            <nav aria-label="Page navigation example">
+              <ul class="pagination ">
+                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">Next</a></li>
+              </ul>
+            </nav>
+
+          </div>
+
+     </div>
 <!-- row  tag-->
   </div>
 </section>
 
+
+
 <!-- products bar -->
 
-<section class="container ">
-  <div class="row justify-content-around ">
-
-    <div class="col-md-2">
-
-      <div class="customize product-itens">
-        <div class="card" style="width: 220px;">
-          <a href="sofas.html">
-            <img class="card-img-top" src="img/living-room-created-by-me/html/lv-7.png" alt="Sofas section">
-            <h3 class="td-deals">Sofas</h3>
-          </a>
-       </div>
-      </div>
-
-    </div>
-
-    <div class="col-md-2">
-
-      <div class="customize product-itens">
-        <div class="card" style="width: 220px;">
-          <a href="sofas.html">
-            <img class="card-img-top" src="img/living-room-created-by-me/html/lv-7.png" alt="Sofas section">
-            <h3 class="td-deals">Sofas</h3>
-          </a>
-       </div>
-      </div>
-
-    </div>
-
-    <div class="col-md-2">
-
-      <div class="customize product-itens">
-        <div class="card" style="width: 220px;">
-          <a href="sofas.html">
-            <img class="card-img-top" src="img/living-room-created-by-me/html/lv-7.png" alt="Sofas section">
-            <h3 class="td-deals">Sofas</h3>
-          </a>
-       </div>
-      </div>
-
-    </div>
-
-    <div class="col-md-2">
-
-      <div class="customize product-itens">
-        <div class="card" style="width: 220px;">
-          <a href="sofas.html">
-            <img class="card-img-top" src="img/living-room-created-by-me/html/lv-7.png" alt="Sofas section">
-            <h3 class="td-deals">Sofas</h3>
-          </a>
-       </div>
-      </div>
-
-    </div>
-
-  </div>
-</section>
-
-
-
-
+</br>
+<hr>
+</br>
 
 <section class="container-fluid">
   <div class="row">
   <!-- Recently Viewed -->
 
-      </br>
-      <h2 class="Recently-Viewed col-md-3 text-right">Recently Viewed</h2>
-      </br>
+      <h2 class="Recently-Viewed col-md-3 text-center">Recently Viewed</h2>
 
         <div class="scrolling-wrapper-flexbox col-md-9 text-right">
-
 
             <div class="card" style="width: 339px;">
               <a href="#">
@@ -601,6 +754,8 @@
                 <h4>$120,00</h4>
               </a>
             </div>
+
+
 
         </div>
 
